# mlops-ref

./: .env  .env.example  .gitignore  TO_RUN  pyproject.toml  requirements.txt
.github/workflows/: ci-dev.yml  deploy-model-to-production.yml  deploy-pipeline.yml  pr-checks.yml
deployment/: run_monitoring_pipeline.py  run_pipeline.py  upload_pipeline_spec.py  upload_sqls_to_gcs.py
src/components/: bq_load.py  calculate_metrics.py  check_model_exists.py  check_validation_result.py  evaluate_model.py  fetch_validation_script.py  load_model.py  prepare_features.py  train_model.py
src/config/: config-dev.json  config-monitoring.json
src/pipelines/: pipeline.py
src/pipelines/monitoring/: mlops-ref-monitoring-pipeline.yaml  pipeline.py
src/pipelines/training/: pipeline.py
src/sql/: validation_sql.sql
src/utils/: evaluate_models_balanced.py
